--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 									<link>https://semanticcms.com/core/pages/apidocs/</link>
 									<link>https://semanticcms.com/core/pages/jsp/apidocs/</link>
 									<link>https://semanticcms.com/core/pages/jspx/apidocs/</link>
+									<link>https://semanticcms.com/core/pages/local/apidocs/</link>
 									<link>https://semanticcms.com/core/pages/servlet/apidocs/</link>
 									<link>https://semanticcms.com/core/pages/union/apidocs/</link>
 									<link>https://semanticcms.com/core/resources/apidocs/</link>
@@ -188,6 +189,11 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 			<artifactId>semanticcms-core-pages-jspx</artifactId>
 			<version>2.0.0-SNAPSHOT</version>
 			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>com.semanticcms</groupId>
+			<artifactId>semanticcms-core-pages-local</artifactId>
+			<version>2.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.semanticcms</groupId>
