--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 semanticcms-core-servlet - Java API for modeling web page content and relationships in a Servlet environment.
-Copyright (C) 2016, 2017  AO Industries, Inc.
+Copyright (C) 2016, 2017, 2018  AO Industries, Inc.
     support@aoindustries.com
     7262 Bull Pen Cir
     Mobile, AL 36695
@@ -79,7 +79,6 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 									<link>https://semanticcms.com/core/model/apidocs/</link>
 									<link>https://semanticcms.com/core/pages/apidocs/</link>
 									<link>https://semanticcms.com/core/pages/local/apidocs/</link>
-									<link>https://semanticcms.com/core/renderer/html/apidocs/</link>
 								</links>
 							</configuration>
 						</plugin>
@@ -150,11 +149,6 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 		<dependency>
 			<groupId>com.semanticcms</groupId>
 			<artifactId>semanticcms-core-pages-local</artifactId>
-			<version>2.0.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>com.semanticcms</groupId>
-			<artifactId>semanticcms-core-renderer-html</artifactId>
 			<version>2.0.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
