--- a/pom.xml
+++ b/pom.xml
@@ -56,29 +56,27 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 		<profile>
 			<id>release</id>
 			<build>
-				<pluginManagement>
-					<plugins>
-						<plugin>
-							<groupId>org.apache.maven.plugins</groupId><artifactId>maven-javadoc-plugin</artifactId>
-							<configuration>
-								<links>
-									<link>${javac.link.javaApi}</link>
-									<link>${javac.link.javaeeApi.6}</link>
-									<link>http://www.joda.org/joda-time/apidocs/</link>
-									<link>https://aoindustries.com/ao-io-buffer/apidocs/</link>
-									<link>https://aoindustries.com/ao-lang/apidocs/</link>
-									<link>https://aoindustries.com/ao-net-types/apidocs/</link>
-									<link>https://aoindustries.com/ao-taglib/apidocs/</link>
-									<link>https://aoindustries.com/aocode-public/apidocs/</link>
-									<link>https://semanticcms.com/core/controller/apidocs/</link>
-									<link>https://semanticcms.com/core/model/apidocs/</link>
-									<link>https://semanticcms.com/core/pages/apidocs/</link>
-									<link>https://semanticcms.com/core/pages/local/apidocs/</link>
-								</links>
-							</configuration>
-						</plugin>
-					</plugins>
-				</pluginManagement>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId><artifactId>maven-javadoc-plugin</artifactId>
+						<configuration>
+							<links>
+								<link>${javac.link.javaApi}</link>
+								<link>${javac.link.javaeeApi.6}</link>
+								<link>http://www.joda.org/joda-time/apidocs</link>
+								<link>https://aoindustries.com/ao-io-buffer/apidocs</link>
+								<link>https://aoindustries.com/ao-lang/apidocs</link>
+								<link>https://aoindustries.com/ao-net-types/apidocs</link>
+								<link>https://aoindustries.com/ao-taglib/apidocs</link>
+								<link>https://aoindustries.com/aocode-public/apidocs</link>
+								<link>https://semanticcms.com/core/controller/apidocs</link>
+								<link>https://semanticcms.com/core/model/apidocs</link>
+								<link>https://semanticcms.com/core/pages/apidocs</link>
+								<link>https://semanticcms.com/core/pages/local/apidocs</link>
+							</links>
+						</configuration>
+					</plugin>
+				</plugins>
 			</build>
 		</profile>
 	</profiles>
