--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 semanticcms-core-servlet - Java API for modeling web page content and relationships in a Servlet environment.
-Copyright (C) 2016, 2017  AO Industries, Inc.
+Copyright (C) 2016, 2017, 2019  AO Industries, Inc.
     support@aoindustries.com
     7262 Bull Pen Cir
     Mobile, AL 36695
@@ -43,7 +43,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 		<shortTitle>Servlet</shortTitle>
 	</properties>
 
-	<name>SemanticCMS Core Servlet</name>
+	<name>SemanticCMS 1 Core Servlet</name>
 	<url>https://semanticcms.com/core/servlet/</url>
 	<description>Java API for modeling web page content and relationships in a Servlet environment.</description>
 	<inceptionYear>2013</inceptionYear>
