--- a/book/pom.xml
+++ b/book/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 semanticcms-core-servlet - Java API for modeling web page content and relationships in a Servlet environment.
-Copyright (C) 2016, 2017, 2018  AO Industries, Inc.
+Copyright (C) 2016, 2017, 2018, 2019  AO Industries, Inc.
     support@aoindustries.com
     7262 Bull Pen Cir
     Mobile, AL 36695
@@ -37,7 +37,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 		<documented.groupId>com.semanticcms</documented.groupId><documented.artifactId>semanticcms-core-servlet</documented.artifactId>
 		<documented.javaVersion>1.6</documented.javaVersion>
 		<documented.javac.link.javaApi>${javac.link.javaApi.jdk16}</documented.javac.link.javaApi>
-		<documented.name>SemanticCMS Core Servlet</documented.name>
+		<documented.name>SemanticCMS 2 Core Servlet</documented.name>
 		<documented.shortTitle>Servlet</documented.shortTitle>
 		<documented.url>https://semanticcms.com/core/servlet/</documented.url>
 		<documented.description>Java API for modeling web page content and relationships in a Servlet environment.</documented.description>
