--- a/pom.xml
+++ b/pom.xml
@@ -25,8 +25,8 @@ along with ao-web-page-servlet.  If not, see <http://www.gnu.org/licenses />.
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.aoindustries</groupId>
-	<artifactId>ao-web-page-servlet</artifactId>
-	<version>1.3-validation-SNAPSHOT</version>
+	<artifactId>semanticcms-core-servlet</artifactId>
+	<version>1.2-SNAPSHOT</version>
 
 	<packaging>pom</packaging>
 
@@ -75,8 +75,8 @@ along with ao-web-page-servlet.  If not, see <http://www.gnu.org/licenses />.
 
 	<distributionManagement>
 		<relocation>
-			<artifactId>semanticcms-core-servlet</artifactId>
-			<message>Renamed project from ao-web-page-servlet to semanticcms-core-servlet.</message>
+			<groupId>com.semanticcms</groupId>
+			<message>Changed groupId from com.aoindustries to com.semanticcms.</message>
 		</relocation>
 
 		<snapshotRepository>
