--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@ along with ao-web-page-servlet.  If not, see <http://www.gnu.org/licenses />.
 
 	<groupId>com.aoindustries</groupId>
 	<artifactId>semanticcms-core-servlet</artifactId>
-	<version>1.2-SNAPSHOT</version>
+	<version>1.2</version>
 
 	<packaging>pom</packaging>
 
@@ -56,7 +56,7 @@ along with ao-web-page-servlet.  If not, see <http://www.gnu.org/licenses />.
 		<connection>scm:git:git://github.com/aoindustries/ao-web-page-servlet.git</connection>
 		<developerConnection>scm:git:git@github.com:aoindustries/ao-web-page-servlet.git</developerConnection>
 		<url>http://github.com/aoindustries/ao-web-page-servlet</url>
-		<tag>HEAD</tag>
+		<tag>ao-moving-semanticcms-core-servlet-1.2</tag>
 	</scm>
 
 	<repositories>
