--- a/book/pom.xml
+++ b/book/pom.xml
@@ -37,7 +37,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 		<documented.groupId>com.semanticcms</documented.groupId><documented.artifactId>semanticcms-core-servlet</documented.artifactId>
 		<documented.javaVersion>1.7</documented.javaVersion>
 		<documented.javac.link.javaApi>${javac.link.javaApi.jdk7}</documented.javac.link.javaApi>
-		<documented.name>SemanticCMS 1 Core Servlet</documented.name>
+		<documented.name>SemanticCMS Core Servlet</documented.name>
 		<documented.shortTitle>Servlet</documented.shortTitle>
 		<documented.url>https://semanticcms.com/core/servlet/</documented.url>
 		<documented.description>Java API for modeling web page content and relationships in a Servlet environment.</documented.description>
