--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 		<shortTitle>Servlet</shortTitle>
 	</properties>
 
-	<name>SemanticCMS 1 Core Servlet</name>
+	<name>SemanticCMS Core Servlet</name>
 	<url>https://semanticcms.com/core/servlet/</url>
 	<description>Java API for modeling web page content and relationships in a Servlet environment.</description>
 	<inceptionYear>2013</inceptionYear>
